youbot_description: 0.8.1-0 in 'kinetic/distribution.yaml' [bloom]

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -10618,6 +10618,20 @@ repositories:
       url: https://github.com/yujinrobot/yocs_msgs.git
       version: kinetic
     status: developed
+  youbot_description:
+    doc:
+      type: git
+      url: https://github.com/youbot/youbot_description.git
+      version: kinetic-devel
+    release:
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/youbot-release/youbot_description-release.git
+      version: 0.8.1-0
+    source:
+      type: git
+      url: https://github.com/youbot/youbot_description.git
+      version: kinetic-devel
   youbot_driver:
     doc:
       type: git
