--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -16458,11 +16458,15 @@ repositories:
       url: https://github.com/youbot/youbot_driver.git
       version: hydro-devel
   youbot_driver_ros_interface:
+    doc:
+      type: git
+      url: https://github.com/youbot/youbot_driver_ros_interface.git
+      version: indigo-devel
     release:
       tags:
         release: release/indigo/{package}/{version}
       url: https://github.com/youbot-release/youbot_driver_ros_interface-release.git
-      version: 1.1.1-0
+      version: 1.1.2-0
     source:
       type: git
       url: https://github.com/youbot/youbot_driver_ros_interface.git
