fanuc: 0.4.3-0 in 'indigo/distribution.yaml' [bloom]

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -3102,11 +3102,14 @@ repositories:
       - fanuc_m430ia2p_moveit_config
       - fanuc_m430ia_moveit_plugins
       - fanuc_m430ia_support
+      - fanuc_m6ib_moveit_config
+      - fanuc_m6ib_moveit_plugins
+      - fanuc_m6ib_support
       - fanuc_resources
       tags:
         release: release/indigo/{package}/{version}
       url: https://github.com/ros-industrial-release/fanuc-release.git
-      version: 0.4.2-0
+      version: 0.4.3-0
     source:
       type: git
       url: https://github.com/ros-industrial/fanuc.git
