gmplot_ros: 1.0.1-0 in 'kinetic/distribution.yaml' [bloom]

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -2574,6 +2574,16 @@ repositories:
       url: https://github.com/ros-visualization/gl_dependency.git
       version: kinetic-devel
     status: maintained
+  gmplot_ros:
+    release:
+      packages:
+      - gmplot
+      - gmplot_msgs
+      - gmplot_ros
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/robustify/gmplot_ros-release.git
+      version: 1.0.1-0
   gps_goal:
     doc:
       type: git
