--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -9820,6 +9820,13 @@ repositories:
         release: release/kinetic/{package}/{version}
       url: https://github.com/ros-gbp/twist_mux_msgs-release.git
       version: 2.0.0-0
+  twistimu:
+    release:
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/easymov/twistimu-release.git
+      version: 1.0.0-0
+    status: maintained
   uavc_v4lctl:
     doc:
       type: git
