multikey_teleop: 1.0.0-0 in 'kinetic/distribution.yaml' [bloom]

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -4752,6 +4752,13 @@ repositories:
       url: https://github.com/christianrauch/msp.git
       version: master
     status: developed
+  multikey_teleop:
+    release:
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/easymov/multikey_teleop-release.git
+      version: 1.0.0-0
+    status: maintained
   multimaster_fkie:
     doc:
       type: git
