Move some packages from python2 to python3
The python3 packages are compatible with python2

Signed-off-by: Patrick José Pereira <patrickelectric@gmail.com>

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -77,7 +77,7 @@ mercurial:
     pip:
       packages: [mercurial]
 paramiko:
-  arch: [python2-paramiko]
+  arch: [python-paramiko]
   debian: [python-paramiko]
   fedora: [python-paramiko]
   freebsd: [py27-paramiko]
@@ -114,7 +114,7 @@ pyper-pip:
     pip:
       packages: [pyper]
 pyqt4-dev-tools:
-  arch: [python2-pyqt4]
+  arch: [python-pyqt4]
   debian: [pyqt4-dev-tools]
   fedora: [PyQt4-devel]
   gentoo: [dev-python/PyQt4]
@@ -125,7 +125,7 @@ pyqt5-dev-tools:
   gentoo: [dev-python/PyQt5]
   ubuntu: [pyqt5-dev-tools]
 pyro4:
-  arch: [python2-pyro]
+  arch: [python-pyro]
   debian: [python2-pyro4]
   fedora: [python-pyro]
   gentoo: [dev-python/pyro]
@@ -154,7 +154,7 @@ pyside-tools:
     utopic: [pyside-tools]
     vivid: [pyside-tools]
 python:
-  arch: [python2]
+  arch: [python]
   cygwin: [python]
   debian: [python-dev]
   fedora: [python-devel]
@@ -252,7 +252,7 @@ python-argh:
   gentoo: [dev-python/argh]
   ubuntu: [python-argh]
 python-argparse:
-  arch: [python2]
+  arch: [python]
   debian:
     buster: [libpython2.7-stdlib]
     jessie: [libpython2.7-stdlib]
@@ -368,7 +368,7 @@ python-backports.ssl-match-hostname:
     xenial: [python-backports.ssl-match-hostname]
     yakkety: [python-backports.ssl-match-hostname]
 python-beautifulsoup:
-  arch: [python2-beautifulsoup3]
+  arch: [python-beautifulsoup4]
   debian: [python-beautifulsoup]
   fedora: [python-BeautifulSoup]
   gentoo: [dev-python/beautifulsoup]
@@ -418,7 +418,7 @@ python-bloom:
     yakkety: [python-bloom]
     zesty: [python-bloom]
 python-bluez:
-  arch: [python2-pybluez]
+  arch: [python-pybluez]
   debian: [python-bluez]
   fedora: [pybluez]
   gentoo: [dev-python/pybluez]
@@ -446,7 +446,7 @@ python-bson:
       packages: [bson]
   ubuntu: [python-bson]
 python-cairo:
-  arch: [python2-cairo]
+  arch: [python-cairo]
   debian: [python-cairo]
   fedora: [pycairo]
   gentoo: [dev-python/pycairo]
@@ -459,7 +459,7 @@ python-catkin-lint:
   fedora: [python-catkin_lint]
   ubuntu: [python-catkin-lint]
 python-catkin-pkg:
-  arch: [python2-catkin_pkg]
+  arch: [python-catkin_pkg]
   debian: [python-catkin-pkg]
   fedora: [python-catkin_pkg]
   gentoo: [dev-python/catkin_pkg]
@@ -497,7 +497,7 @@ python-catkin-sphinx:
       packages: [catkin_sphinx]
   ubuntu: [python-catkin-sphinx]
 python-catkin-tools:
-  arch: [python2-catkin-tools]
+  arch: [python-catkin-tools]
   fedora: [python-catkin_tools]
   osx:
     pip:
@@ -605,7 +605,7 @@ python-click:
     xenial: [python-click]
     yakkety: [python-click]
 python-colorama:
-  arch: [python2-colorama]
+  arch: [python-colorama]
   debian: [python-colorama]
   fedora: [python-colorama]
   gentoo: [dev-python/colorama]
@@ -657,7 +657,7 @@ python-couchdb:
     saucy: [python-couchdb]
     trusty: [python-couchdb]
 python-coverage:
-  arch: [python2-coverage]
+  arch: [python-coverage]
   debian: [python-coverage]
   fedora: [python-coverage]
   gentoo: [dev-python/coverage]
@@ -710,7 +710,7 @@ python-crccheck-pip:
     pip:
       packages: [crccheck]
 python-crypto:
-  arch: [python2-crypto]
+  arch: [python-crypto]
   debian: [python-crypto]
   fedora: [python-crypto]
   gentoo: [dev-python/pycrypto]
@@ -753,7 +753,7 @@ python-cwiid:
   rhel: [cwiid]
   ubuntu: [python-cwiid]
 python-dateutil:
-  arch: [python2-dateutil]
+  arch: [python-dateutil]
   debian: [python-dateutil]
   fedora: [python-dateutil]
   gentoo: [dev-python/python-dateutil]
@@ -803,7 +803,7 @@ python-defer-pip:
     pip:
       packages: [defer]
 python-defusedxml:
-  arch: [python2-defusedxml]
+  arch: [python-defusedxml]
   debian: [python-defusedxml]
   fedora: [python-defusedxml]
   gentoo: [dev-python/defusedxml]
@@ -832,7 +832,7 @@ python-docopt:
   ubuntu:
     pip: [docopt]
 python-docutils:
-  arch: [python2-docutils]
+  arch: [python-docutils]
   debian: [python-docutils]
   fedora: [python-docutils]
   gentoo: [dev-python/docutils]
@@ -865,7 +865,7 @@ python-easygui:
   fedora: [python-easygui]
   ubuntu: [python-easygui]
 python-empy:
-  arch: [python2-empy]
+  arch: [python-empy]
   debian: [python-empy]
   fedora: [python-empy]
   gentoo: [dev-python/empy]
@@ -1130,7 +1130,7 @@ python-gevent:
   gentoo: [dev-python/gevent]
   ubuntu: [python-gevent]
 python-gi:
-  arch: [python2-gobject]
+  arch: [python-gobject]
   debian: [python-gi]
   fedora: [pygobject3]
   gentoo: [dev-python/pygobject]
@@ -1273,7 +1273,7 @@ python-hypothesis:
     zesty: [python-hypothesis]
     zesty_python3: [python3-hypothesis]
 python-imaging:
-  arch: [python2-pillow]
+  arch: [python-pillow]
   debian: [python-imaging]
   fedora:
     '21': [python-pillow, python-pillow-qt]
@@ -1393,7 +1393,7 @@ python-kdtree:
     pip:
       packages: [kdtree]
 python-kitchen:
-  arch: [python2-kitchen]
+  arch: [python-kitchen]
   debian: [python-kitchen]
   fedora: [python-kitchen]
   gentoo: [dev-python/kitchen]
@@ -1477,7 +1477,7 @@ python-luis-pip:
     pip:
       packages: [luis]
 python-lxml:
-  arch: [python2-lxml]
+  arch: [python-lxml]
   debian: [python-lxml]
   fedora: [python-lxml]
   gentoo: [dev-python/lxml]
@@ -1516,7 +1516,7 @@ python-marshmallow:
     pip:
       packages: [marshmallow]
 python-matplotlib:
-  arch: [python2-matplotlib]
+  arch: [python-matplotlib]
   debian: [python-matplotlib]
   fedora: [python-matplotlib]
   freebsd: [py27-matplotlib]
@@ -1553,7 +1553,7 @@ python-matplotlib:
     zesty: [python-matplotlib]
     zesty_python3: [python3-matplotlib]
 python-mechanize:
-  arch: [python2-mechanize]
+  arch: [python-mechanize]
   debian: [python-mechanize]
   fedora: [python-mechanize]
   gentoo: [dev-python/mechanize]
@@ -1570,7 +1570,7 @@ python-mechanize:
     wily: [python-mechanize]
     xenial: [python-mechanize]
 python-mock:
-  arch: [python2-mock]
+  arch: [python-mock]
   debian: [python-mock]
   fedora: [python-mock]
   gentoo: [dev-python/mock]
@@ -1599,7 +1599,7 @@ python-mock:
     yakkety: [python-mock]
     zesty: [python-mock]
 python-msgpack:
-  arch: [python2-msgpack]
+  arch: [python-msgpack]
   debian: [python-msgpack]
   fedora: [python-msgpack]
   gentoo: [dev-python/msgpack]
@@ -1664,7 +1664,7 @@ python-netaddr:
     utopic: [python-netaddr]
     vivid: [python-netaddr]
 python-netifaces:
-  arch: [python2-netifaces]
+  arch: [python-netifaces]
   debian: [python-netifaces]
   fedora: [python-netifaces]
   gentoo: [dev-python/netifaces]
@@ -1702,7 +1702,7 @@ python-networkmanager:
     stretch: [python-networkmanager]
   ubuntu: [python-networkmanager]
 python-networkx:
-  arch: [python2-networkx]
+  arch: [python-networkx]
   debian: [python-networkx]
   fedora: [python-networkx]
   gentoo: [dev-python/networkx]
@@ -1726,7 +1726,7 @@ python-networkx:
     zesty: [python-networkx]
     zesty_python3: [python3-networkx]
 python-nose:
-  arch: [python2-nose]
+  arch: [python-nose]
   debian: [python-nose]
   fedora: [python-nose]
   gentoo: [dev-python/nose]
@@ -1756,7 +1756,7 @@ python-nose:
     yakkety: [python-nose]
     zesty: [python-nose]
 python-numpy:
-  arch: [python2-numpy]
+  arch: [python-numpy]
   debian: [python-numpy]
   fedora: [numpy]
   freebsd: [py-numpy]
@@ -1836,7 +1836,7 @@ python-opencv:
   slackware: [opencv]
   ubuntu: [python-opencv]
 python-opengl:
-  arch: [python2-opengl]
+  arch: [python-opengl]
   debian: [python-opengl]
   fedora: [PyOpenGL]
   gentoo: [dev-python/pyopengl]
@@ -1872,13 +1872,13 @@ python-paho-mqtt-pip:
     pip:
       packages: [paho-mqtt]
 python-pandas:
-  arch: [python2-pandas]
+  arch: [python-pandas]
   debian: [python-pandas]
   fedora: [python-pandas]
   gentoo: [dev-python/pandas]
   ubuntu: [python-pandas]
 python-paramiko:
-  arch: [python2-paramiko]
+  arch: [python-paramiko]
   debian: [python-paramiko]
   fedora: [python-paramiko]
   freebsd: [py27-paramiko]
@@ -1932,7 +1932,7 @@ python-pathtools:
     yakkety: [python-pathtools]
     zesty: [python-pathtools]
 python-pcapy:
-  arch: [python2-pcapy]
+  arch: [python-pcapy]
   debian: [python-pcapy]
   fedora: [pcapy]
   gentoo: [dev-python/pcapy]
@@ -1949,7 +1949,7 @@ python-pcapy:
     utopic: [python-pcapy]
     vivid: [python-pcapy]
 python-pep8:
-  arch: [python2-pep8]
+  arch: [python-pep8]
   debian: [pep8]
   fedora: [python-pep8]
   gentoo: [dev-python/pep8]
@@ -1998,7 +1998,7 @@ python-periphery-pip:
     pip:
       packages: [python-periphery]
 python-pexpect:
-  arch: [python2-pexpect]
+  arch: [python-pexpect]
   debian: [python-pexpect]
   fedora: [pexpect]
   gentoo: [dev-python/pexpect]
@@ -2022,7 +2022,7 @@ python-pexpect:
     xenial: [python-pexpect]
     xenial_python3: [python3-pexpect]
 python-pip:
-  arch: [python2-pip]
+  arch: [python-pip]
   debian: [python-pip]
   fedora: [python-pip]
   gentoo: [dev-python/pip]
@@ -2084,7 +2084,7 @@ python-protobuf:
   gentoo: [dev-python/protobuf-python]
   ubuntu: [python-protobuf]
 python-psutil:
-  arch: [python2-psutil]
+  arch: [python-psutil]
   debian: [python-psutil]
   fedora: [python-psutil]
   gentoo: [dev-python/psutil]
@@ -2132,7 +2132,7 @@ python-psycopg2:
     xenial: [python-psycopg2]
     xenial_python3: [python3-psycopg2]
 python-pyassimp:
-  arch: [python2-pyassimp]
+  arch: [python-pyassimp]
   debian: [python-pyassimp]
   fedora: [assimp-python]
   gentoo: [dev-libs/assimp]
@@ -2160,7 +2160,7 @@ python-pyaudio:
   gentoo: [dev-python/pyaudio]
   ubuntu: [python-pyaudio]
 python-pydot:
-  arch: [python2-pydot]
+  arch: [python-pydot]
   debian: [python-pydot]
   fedora: [pydot]
   gentoo: [dev-python/pydot]
@@ -2191,7 +2191,7 @@ python-pyftpdlib:
   gentoo: [dev-python/pyftpdlib]
   ubuntu: [python-pyftpdlib]
 python-pygame:
-  arch: [python2-pygame]
+  arch: [python-pygame]
   debian: [python-pygame]
   fedora: [pygame-devel]
   gentoo: [dev-python/pygame]
@@ -2223,7 +2223,7 @@ python-pygraph:
   debian: [python-pygraph]
   ubuntu: [python-pygraph]
 python-pygraphviz:
-  arch: [python2-pygraphviz]
+  arch: [python-pygraphviz]
   debian: [python-pygraphviz]
   fedora: [graphviz-python]
   gentoo: [dev-python/pygraphviz]
@@ -2301,7 +2301,7 @@ python-pymodbus:
     wily: [python-pymodbus]
     xenial: [python-pymodbus]
 python-pymongo:
-  arch: [python2-pymongo]
+  arch: [python-pymongo]
   debian: [python-pymongo]
   fedora: [python-pymongo]
   gentoo: [dev-python/pymongo]
@@ -2348,7 +2348,7 @@ python-pynmea2:
     pip:
       packages: [pynmea2]
 python-pyproj:
-  arch: [python2-pyproj]
+  arch: [python-pyproj]
   debian: [python-pyproj]
   fedora: [pyproj]
   gentoo: [dev-python/pyproj]
@@ -2370,7 +2370,7 @@ python-pyramid:
   gentoo: [dev-python/pyramid]
   ubuntu: [python-pyramid]
 python-pyside:
-  arch: [python2-pyside]
+  arch: [python-pyside]
   debian: [python-pyside]
   fedora: [python-pyside]
   gentoo: [dev-python/pyside]
@@ -2408,7 +2408,7 @@ python-pyside.qtuitools:
     vivid: [python-pyside.qtuitools]
     vivid_python3: [python3-pyside.qtuitools]
 python-pytest:
-  arch: [python2-pytest]
+  arch: [python-pytest]
   debian: [python-pytest]
   fedora: [python-pytest]
   gentoo: [dev-python/pytest]
@@ -2455,7 +2455,7 @@ python-qrencode:
   gentoo: [media-gfx/qrencode-python]
   ubuntu: [python-qrencode]
 python-qt-bindings:
-  arch: [python2-pyqt4]
+  arch: [python-pyqt4]
   debian:
     buster: [python-pyside, libpyside-dev, libshiboken-dev, shiboken, python-qt4, python-qt4-dev, python-sip-dev]
     jessie: [python-pyside, libpyside-dev, libshiboken-dev, shiboken, python-qt4, python-qt4-dev, python-sip-dev]
@@ -2481,7 +2481,7 @@ python-qt-bindings:
     wily: [python-pyside, libpyside-dev, libshiboken-dev, shiboken, python-qt4, python-qt4-dev, python-sip-dev]
     xenial: [python-pyside, libpyside-dev, libshiboken-dev, shiboken, python-qt4, python-qt4-dev, python-sip-dev]
 python-qt-bindings-gl:
-  arch: [python2-pyqt4]
+  arch: [python-pyqt4]
   debian: [python-qt4-gl]
   fedora: [PyQt4]
   gentoo: ['dev-python/pyside[opengl]', 'dev-python/PyQt4[opengl]']
@@ -2501,7 +2501,7 @@ python-qt-bindings-gl:
     wily: [python-qt4-gl]
     xenial: [python-qt4-gl]
 python-qt-bindings-qwt5:
-  arch: [python2-pyqwt]
+  arch: [python-pyqwt]
   debian: [python-qwt5-qt4]
   fedora: [PyQwt-devel]
   gentoo: ['dev-python/pyqwt:5']
@@ -2531,7 +2531,7 @@ python-qt4-gl:
   gentoo: ['dev-python/pyside[opengl]', 'dev-python/PyQt4[opengl]']
   ubuntu: [python-qt4-gl]
 python-qt5-bindings:
-  arch: [python2-pyqt5]
+  arch: [python-pyqt5]
   debian:
     buster: [pyqt5-dev, python-pyqt5, python-pyqt5.qtsvg, python-sip-dev, qtbase5-dev]
     jessie: [pyqt5-dev, python-pyqt5, python-pyqt5.qtsvg, python-sip-dev, qtbase5-dev]
@@ -2546,7 +2546,7 @@ python-qt5-bindings:
     yakkety: [libpyside2-dev, libshiboken2-dev, pyqt5-dev, python-pyqt5, python-pyqt5.qtsvg, python-pyside2, python-sip-dev, shiboken2]
     zesty: [pyqt5-dev, python-pyqt5, python-pyqt5.qtsvg, python-sip-dev]
 python-qt5-bindings-gl:
-  arch: [python2-pyqt5]
+  arch: [python-pyqt5]
   debian:
     buster: [python-pyqt5.qtopengl]
     jessie: [python-pyqt5.qtopengl]
@@ -2561,7 +2561,7 @@ python-qt5-bindings-gl:
     yakkety: [python-pyqt5.qtopengl]
     zesty: [python-pyqt5.qtopengl]
 python-qt5-bindings-webkit:
-  arch: [python2-pyqt5]
+  arch: [python-pyqt5]
   debian:
     buster: [python-pyqt5.qtwebkit]
     jessie: [python-pyqt5.qtwebkit]
@@ -2653,7 +2653,7 @@ python-responses-pip:
     pip:
       packages: [responses]
 python-rosdep:
-  arch: [python2-rosdep]
+  arch: [python-rosdep]
   debian: [python-rosdep]
   fedora: [python-rosdep]
   gentoo: [dev-python/rosdep]
@@ -2716,7 +2716,7 @@ python-rosdistro:
     zesty: [python-rosdistro]
     zesty_python3: [python3-rosdistro]
 python-rosinstall:
-  arch: [python2-rosinstall]
+  arch: [python-rosinstall]
   debian: [python-rosinstall]
   fedora: [python-rosinstall]
   gentoo: [dev-python/rosinstall]
@@ -2740,7 +2740,7 @@ python-rosinstall:
     yakkety: [python-rosinstall]
     zesty: [python-rosinstall]
 python-rosinstall-generator:
-  arch: [python2-rosinstall-generator]
+  arch: [python-rosinstall-generator]
   debian:
     buster: [python-rosinstall-generator]
     stretch: [python-rosinstall-generator]
@@ -2759,7 +2759,7 @@ python-rosinstall-generator:
     trusty: [python-rosinstall-generator]
     trusty_python3: [python3-rosinstall-generator]
 python-rospkg:
-  arch: [python2-rospkg]
+  arch: [python-rospkg]
   debian: [python-rospkg]
   fedora: [python-rospkg]
   gentoo: [dev-python/rospkg]
@@ -2823,7 +2823,7 @@ python-scapy:
     saucy: [python-scapy]
     trusty: [python-scapy]
 python-scipy:
-  arch: [python2-scipy]
+  arch: [python-scipy]
   debian: [python-scipy]
   fedora: [scipy]
   freebsd: [py-scipy]
@@ -2862,7 +2862,7 @@ python-selenium-pip:
     pip:
       packages: [selenium]
 python-serial:
-  arch: [python2-pyserial]
+  arch: [python-pyserial]
   debian: [python-serial]
   fedora: [pyserial]
   gentoo: [dev-python/pyserial]
@@ -2886,7 +2886,7 @@ python-serial:
     xenial: [python-serial]
     xenial_python3: [python3-serial]
 python-setuptools:
-  arch: [python2-distribute]
+  arch: [python-distribute]
   debian: [python-setuptools]
   fedora: [python-setuptools]
   gentoo: [dev-python/setuptools]
@@ -2944,7 +2944,7 @@ python-shapely:
     yakkety: [python-shapely]
     yakkety_python3: [python3-shapely]
 python-simplejson:
-  arch: [python2-simplejson]
+  arch: [python-simplejson]
   debian: [python-simplejson]
   fedora: [python-simplejson]
   gentoo: [dev-python/simplejson]
@@ -2993,7 +2993,7 @@ python-sip4:
   gentoo: ['=dev-python/sip-4*']
   macports: [py27-sip4]
 python-six:
-  arch: [python2-six]
+  arch: [python-six]
   debian: [python-six]
   fedora: [python-six]
   gentoo: [dev-python/six]
@@ -3120,7 +3120,7 @@ python-speechrecognition-pip:
     pip:
       packages: [speechrecognition]
 python-sphinx:
-  arch: [python2-sphinx]
+  arch: [python-sphinx]
   debian: [python-sphinx]
   fedora: [python-sphinx]
   freebsd: [py27-sphinx]
@@ -3323,7 +3323,7 @@ python-testtools:
   gentoo: [dev-python/testtools]
   ubuntu: [python-testtools]
 python-texttable:
-  arch: [python2-texttable]
+  arch: [python-texttable]
   debian:
     buster: [python-texttable]
     jessie: [python-texttable]
@@ -3404,7 +3404,7 @@ python-tinydb-pip:
     pip:
       packages: [tinydb]
 python-tk:
-  arch: [python2, tk]
+  arch: [python, tk]
   debian: [python-tk]
   fedora: [blt, tcl, tix, tk]
   ubuntu:
@@ -3491,7 +3491,7 @@ python-trep:
     pip:
       packages: [trep]
 python-twisted-bin:
-  arch: [python2-twisted]
+  arch: [python-twisted]
   debian: [python-twisted-bin]
   fedora: [python-twisted-core]
   ubuntu:
@@ -3507,13 +3507,13 @@ python-twisted-bin:
     wily: [python-twisted-bin]
     xenial: [python-twisted-bin]
 python-twisted-core:
-  arch: [python2-twisted]
+  arch: [python-twisted]
   debian: [python-twisted-core]
   fedora: [python-twisted-core]
   gentoo: [dev-python/twisted-core]
   ubuntu: [python-twisted-core]
 python-twisted-web:
-  arch: [python2-twisted]
+  arch: [python-twisted]
   debian: [python-twisted-web]
   fedora: [python-twisted-web]
   gentoo: [dev-python/twisted-web]
@@ -3547,7 +3547,7 @@ python-twitter:
     saucy: [python-twitter]
     trusty: [python-twitter]
 python-tz:
-  arch: [python2-pytz]
+  arch: [python-pytz]
   debian: [python-tz]
   fedora: [pytz]
   gentoo: [dev-python/pytz]
@@ -3780,7 +3780,7 @@ python-xmltodict:
     yakkety: [python-xmltodict]
     zesty: [python-xmltodict]
 python-yaml:
-  arch: [python2-yaml]
+  arch: [python-yaml]
   centos: [PyYAML]
   debian: [python-yaml]
   fedora: [PyYAML]
@@ -3821,7 +3821,7 @@ python-zbar:
   gentoo: ['media-gfx/zbar[python]']
   ubuntu: [python-zbar]
 python-zmq:
-  arch: [python2-pyzmq]
+  arch: [python-pyzmq]
   debian: [python-zmq]
   fedora: [python-zmq]
   gentoo: [dev-python/pyzmq]
