Add Qt 5 Concurrent module

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -2559,6 +2559,14 @@ libqt4-sql-psql:
   gentoo: ['dev-qt/qtsql:4']
   macports: [qt4-mac]
   ubuntu: [libqt4-sql-psql]
+libqt5-concurrent:
+  arch:   [qt5-base]
+  debian: [libqt5concurrent5]
+  fedora: [qt5-qtbase]
+  gentoo: ['dev-qt/qtconcurrent:5']
+  opensuse: [libQt5Concurrent5]
+  slackware: [qt5]
+  ubuntu: [libqt5concurrent5]
 libqt5-core:
   arch:   [qt5-base]
   debian: [libqt5core5a]
