nerian_sp1 node is now end-of-life and has been replaced by nerian_stereo

--- a/hydro/distribution.yaml
+++ b/hydro/distribution.yaml
@@ -4795,7 +4795,7 @@ repositories:
       type: git
       url: https://github.com/nerian-vision/nerian_sp1.git
       version: master
-    status: developed
+    status: end-of-life
   nmea_comms:
     release:
       tags:
