--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -7889,7 +7889,7 @@ repositories:
       type: git
       url: https://github.com/nerian-vision/nerian_sp1.git
       version: master
-    status: developed
+    status: end-of-life
   netft_utils:
     doc:
       type: git
