--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -5167,7 +5167,7 @@ repositories:
       type: git
       url: https://github.com/nerian-vision/nerian_sp1.git
       version: master
-    status: developed
+    status: end-of-life
   nerian_stereo:
     doc:
       type: git
