--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -1728,7 +1728,7 @@ repositories:
       type: git
       url: https://github.com/nerian-vision/nerian_sp1.git
       version: master
-    status: developed
+    status: end-of-life
   nerian_stereo:
     doc:
       type: git
