Added status_description for nerian_sp1 EOL and reverted changes to EOL distributions

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -5168,6 +5168,7 @@ repositories:
       url: https://github.com/nerian-vision/nerian_sp1.git
       version: master
     status: end-of-life
+    status_description: Package has been replaced by nerian_stereo
   nerian_stereo:
     doc:
       type: git
