--- a/hydro/distribution.yaml
+++ b/hydro/distribution.yaml
@@ -4795,7 +4795,7 @@ repositories:
       type: git
       url: https://github.com/nerian-vision/nerian_sp1.git
       version: master
-    status: end-of-life
+    status: developed
   nmea_comms:
     release:
       tags:
