--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -7890,6 +7890,7 @@ repositories:
       url: https://github.com/nerian-vision/nerian_sp1.git
       version: master
     status: end-of-life
+    status_description: Package has been replaced by nerian_stereo
   netft_utils:
     doc:
       type: git
