--- a/jade/distribution.yaml
+++ b/jade/distribution.yaml
@@ -3721,7 +3721,7 @@ repositories:
       type: git
       url: https://github.com/nerian-vision/nerian_sp1.git
       version: master
-    status: end-of-life
+    status: developed
   netft_utils:
     doc:
       type: git
