--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -1729,6 +1729,7 @@ repositories:
       url: https://github.com/nerian-vision/nerian_sp1.git
       version: master
     status: end-of-life
+    status_description: Package has been replaced by nerian_stereo
   nerian_stereo:
     doc:
       type: git
