fcl_catkin: 0.5.90-0 in 'kinetic/distribution.yaml' [bloom]

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -2053,6 +2053,13 @@ repositories:
       url: https://git.fawkesrobotics.org/fawkes_msgs.git
       version: master
     status: developed
+  fcl_catkin:
+    release:
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/wxmerkt/fcl_catkin-release.git
+      version: 0.5.90-0
+    status: developed
   feed_the_troll:
     doc:
       type: git
