--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -5167,7 +5167,8 @@ repositories:
       type: git
       url: https://github.com/nerian-vision/nerian_sp1.git
       version: master
-    status: developed
+    status: end-of-life
+    status_description: Package has been replaced by nerian_stereo
   nerian_stereo:
     doc:
       type: git
