--- a/rosdep/osx-homebrew.yaml
+++ b/rosdep/osx-homebrew.yaml
@@ -279,6 +279,10 @@ libpgm:
   osx:
     homebrew:
       packages: [libpgm]
+libpng-dev:
+  osx:
+    homebrew:
+      packages: [libpng]
 libpng12-dev:
   osx:
     homebrew:
@@ -399,6 +403,10 @@ libvtk-qt:
   osx:
     homebrew:
       depends: [libvtk]
+libwebp-dev:
+  osx:
+    homebrew:
+      packages: [webp]
 libx11:
   osx:
     homebrew:
