pcl formula is now in core.

--- a/rosdep/osx-homebrew.yaml
+++ b/rosdep/osx-homebrew.yaml
@@ -274,7 +274,7 @@ libpcl-all:
 libpcl-all-dev:
   osx:
     homebrew:
-      packages: [homebrew/science/pcl]
+      packages: [pcl]
 libpgm:
   osx:
     homebrew:
