Added python-numpydoc for several distributions

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -1785,6 +1785,15 @@ python-numpy:
     xenial: [python-numpy]
     yakkety: [python-numpy]
     zesty: [python-numpy]
+python-numpydoc:
+  arch: [python2-numpydoc]
+  debian: [python-numpydoc]
+  opensuse: [python-numpydoc]
+  ubuntu:
+    artful: [python-numpydoc]
+    trusty: [python-numpydoc]
+    xenial: [python-numpydoc]
+    zesty: [python-numpydoc]
 python-numpy-stl-pip:
   osx:
     pip:
