Added python-numpydoc for several distributions (#16136)
* Added python-numpydoc for several distributions

* Fixed alphabetical order

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -1792,6 +1792,15 @@ python-numpy-stl-pip:
   ubuntu:
     pip:
       packages: [numpy-stl]
+python-numpydoc:
+  arch: [python2-numpydoc]
+  debian: [python-numpydoc]
+  opensuse: [python-numpydoc]
+  ubuntu:
+    artful: [python-numpydoc]
+    trusty: [python-numpydoc]
+    xenial: [python-numpydoc]
+    zesty: [python-numpydoc]
 python-oauth2:
   arch: [python-oauth2]
   debian: [python-oauth2]
