Add rendering use flag to vtk
Enables vtk libraries without which opencv would fail to build.

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -3108,7 +3108,7 @@ libvtk-qt:
     stretch: [libvtk6-qt-dev]
     wheezy: [libvtk5-qt4-dev]
   fedora: [vtk-qt]
-  gentoo: ['sci-libs/vtk[qt4]'] #qt5 is available too
+  gentoo: ['sci-libs/vtk[qt4,rendering]'] #qt5 is available too
   opensuse: [vtk-qt]
   slackware: [VTK]
   ubuntu:
