--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -2925,7 +2925,7 @@ repositories:
         release: release/kinetic/{package}/{version}
       url: https://github.com/ros-gbp/household_objects_database_msgs-release.git
       version: 0.1.2-0
-    source:
+   rospack source:
       type: git
       url: https://github.com/ros-interactive-manipulation/household_objects_database_msgs.git
       version: hydro-devel
@@ -7739,12 +7739,12 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros/rospack.git
-      version: jade-devel
+      version: lunar-devel
     release:
       tags:
         release: release/kinetic/{package}/{version}
       url: https://github.com/ros-gbp/rospack-release.git
-      version: 2.3.3-0
+      version: 2.4.3-0
     source:
       test_pull_requests: true
       type: git
