--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -7739,12 +7739,12 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros/rospack.git
-      version: lunar-devel
+      version: jade-devel
     release:
       tags:
         release: release/kinetic/{package}/{version}
       url: https://github.com/ros-gbp/rospack-release.git
-      version: 2.4.3-0
+      version: 2.3.3-0
     source:
       test_pull_requests: true
       type: git
