--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -9544,6 +9544,16 @@ repositories:
       url: https://bitbucket.org/traclabs/trac_ik.git
       version: master
     status: developed
+  tracetools:
+    doc:
+      type: git
+      url: https://github.com/bosch-robotics-cr/tracetools.git
+      version: devel
+    source:
+      type: git
+      url:  https://github.com/bosch-robotics-cr/tracetools.git
+      version: devel
+    status: developed
   turtlebot:
     doc:
       type: git
