--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -15095,6 +15095,16 @@ repositories:
       url: https://bitbucket.org/traclabs/trac_ik.git
       version: master
     status: developed
+  tracetools:
+    doc:
+      type: git
+      url: https://github.com/bosch-robotics-cr/tracetools.git
+      version: devel
+    source:
+      type: git
+      url: https://github.com/bosch-robotics-cr/tracetools.git
+      version: devel
+    status: developed
   transform_graph:
     doc:
       type: git
