--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -15100,6 +15100,11 @@ repositories:
       type: git
       url: https://github.com/bosch-robotics-cr/tracetools.git
       version: devel
+    release:
+      tags:
+        release: release/indigo/{package}/{version}
+      url: https://github.com/bosch-robotics-cr/tracetools.git
+      version: 0.1.0
     source:
       type: git
       url: https://github.com/bosch-robotics-cr/tracetools.git
