--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -9615,6 +9615,11 @@ repositories:
       type: git
       url: https://github.com/bosch-robotics-cr/tracetools.git
       version: devel
+    release:
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/bosch-robotics-cr/tracetools.git
+      version: 0.1.0
     source:
       type: git
       url: https://github.com/bosch-robotics-cr/tracetools.git
