numpydoc for gentoo

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -1795,6 +1795,7 @@ python-numpy-stl-pip:
 python-numpydoc:
   arch: [python2-numpydoc]
   debian: [python-numpydoc]
+  gentoo: [dev-python/numpydoc]
   opensuse: [python-numpydoc]
   ubuntu:
     artful: [python-numpydoc]
