executive_smach_visualization: 2.0.2-0 in 'jade/distribution.yaml' [bloom]

--- a/jade/distribution.yaml
+++ b/jade/distribution.yaml
@@ -1112,11 +1112,12 @@ repositories:
       tags:
         release: release/jade/{package}/{version}
       url: https://github.com/jbohren/executive_smach_visualization-release.git
-      version: 2.0.1-0
+      version: 2.0.2-0
     source:
       type: git
       url: https://github.com/ros-visualization/executive_smach_visualization.git
       version: indigo-devel
+    status: unmaintained
   fanuc:
     doc:
       type: git
