--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -6885,6 +6885,26 @@ repositories:
       url: https://github.com/ROBOTIS-GIT/ROBOTIS-Math.git
       version: kinetic-devel
     status: maintained
+  robotis_op3_msgs:
+    doc:
+      type: git
+      url: https://github.com/ROBOTIS-GIT/ROBOTIS-OP3-msgs.git
+      version: kinetic-devel
+    release:
+      packages:
+      - op3_action_module_msgs
+      - op3_offset_tuner_msgs
+      - op3_walking_module_msgs
+      - robotis_op3_msgs
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/ROBOTIS-GIT-release/ROBOTIS-OP3-msgs-release.git
+      version: 0.1.0-0
+    source:
+      type: git
+      url: https://github.com/ROBOTIS-GIT/ROBOTIS-OP3-msgs.git
+      version: kinetic-devel
+    status: developed
   robotis_utility:
     doc:
       type: git
