robotis_op3: 0.1.0-1 in 'kinetic/distribution.yaml' [bloom]

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -6885,6 +6885,31 @@ repositories:
       url: https://github.com/ROBOTIS-GIT/ROBOTIS-Math.git
       version: kinetic-devel
     status: maintained
+  robotis_op3:
+    doc:
+      type: git
+      url: https://github.com/ROBOTIS-GIT/ROBOTIS-OP3.git
+      version: kinetic-devel
+    release:
+      packages:
+      - cm_740_module
+      - op3_action_module
+      - op3_base_module
+      - op3_head_control_module
+      - op3_kinematics_dynamics
+      - op3_manager
+      - op3_walking_module
+      - open_cr_module
+      - robotis_op3
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/ROBOTIS-GIT-release/ROBOTIS-OP3-release.git
+      version: 0.1.0-1
+    source:
+      type: git
+      url: https://github.com/ROBOTIS-GIT/ROBOTIS-OP3.git
+      version: kinetic-devel
+    status: developed
   robotis_op3_msgs:
     doc:
       type: git
