--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -3187,6 +3187,16 @@ repositories:
       url: https://github.com/ros-industrial/industrial_core.git
       version: kinetic
     status: maintained
+  innok_heros_description:
+    doc:
+      type: git
+      url: https://github.com/innokrobotics/innok_heros_description.git
+      version: kinetic
+    source:
+      type: git
+      url: https://github.com/innokrobotics/innok_heros_description.git
+      version: kinetic
+    status: maintained
   innok_heros_driver:
     doc:
       type: git
