--- a/jade/distribution.yaml
+++ b/jade/distribution.yaml
@@ -8061,6 +8061,31 @@ repositories:
       url: https://github.com/ros/xacro.git
       version: jade-devel
     status: developed
+  xpp:
+    doc:
+      type: git
+      url: https://github.com/leggedrobotics/xpp.git
+      version: master
+    release:
+      packages:
+      - xpp
+      - xpp_examples
+      - xpp_hyq
+      - xpp_msgs
+      - xpp_quadrotor
+      - xpp_ros_conversions
+      - xpp_states
+      - xpp_vis
+      tags:
+        release: release/jade/{package}/{version}
+      url: https://github.com/leggedrobotics/xpp-release.git
+      version: 1.0.1-0
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/leggedrobotics/xpp.git
+      version: master
+    status: developed
   xsens_driver:
     doc:
       type: git
