Add python-debian for wily, xenial

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -791,6 +791,10 @@ python-debian:
     utopic_python3: [python3-debian]
     vivid: [python-debian]
     vivid_python3: [python3-debian]
+    wily: [python-debian]
+    wily_python3: [python3-debian]
+    xenial: [python-debian]
+    xenial_python3: [python3-debian]
 python-deepdiff-pip:
   debian:
     pip: [deepdiff]
