python-debian for yakkety, zesty, artful

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -795,6 +795,12 @@ python-debian:
     wily_python3: [python3-debian]
     xenial: [python-debian]
     xenial_python3: [python3-debian]
+    yakkety: [python-debian]
+    yakkety_python3: [python3-debian]
+    zesty: [python-debian]
+    zesty_python3: [python3-debian]
+    artful: [python-debian]
+    artful_python3: [python3-debian]
 python-deepdiff-pip:
   debian:
     pip: [deepdiff]
