--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -8,7 +8,7 @@ adafruit-pca9685-pip:
   ubuntu:
     pip:
       packages: [adafruit-pca9685]
-catkin_pkg:
+catkin_pkg:f
   gentoo: [dev-python/catkin_pkg]
 cmakelint-pip:
   debian:
@@ -787,6 +787,8 @@ python-debian:
   ubuntu:
     artful: [python-debian]
     artful_python3: [python3-debian]
+    bionic: [python-debian]
+    bionic_python3: [python3-debian]
     trusty: [python-debian]
     trusty_python3: [python3-debian]
     utopic: [python-debian]
