--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -8,7 +8,7 @@ adafruit-pca9685-pip:
   ubuntu:
     pip:
       packages: [adafruit-pca9685]
-catkin_pkg:f
+catkin_pkg:
   gentoo: [dev-python/catkin_pkg]
 cmakelint-pip:
   debian:
