--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -785,12 +785,24 @@ python-debian:
   fedora: [python-debian]
   gentoo: [dev-python/python-debian]
   ubuntu:
+    artful: [python-debian]
+    artful_python3: [python3-debian]
+    bionic: [python-debian]
+    bionic_python3: [python3-debian]
     trusty: [python-debian]
     trusty_python3: [python3-debian]
     utopic: [python-debian]
     utopic_python3: [python3-debian]
     vivid: [python-debian]
     vivid_python3: [python3-debian]
+    wily: [python-debian]
+    wily_python3: [python3-debian]
+    xenial: [python-debian]
+    xenial_python3: [python3-debian]
+    yakkety: [python-debian]
+    yakkety_python3: [python3-debian]
+    zesty: [python-debian]
+    zesty_python3: [python3-debian]
 python-deepdiff-pip:
   debian:
     pip: [deepdiff]
