sns-ik: 0.2.3-0 in 'kinetic/distribution.yaml' [bloom]

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -9015,6 +9015,21 @@ repositories:
       url: https://github.com/larics/smartek_camera.git
       version: master
     status: maintained
+  sns-ik:
+    release:
+      packages:
+      - sns_ik
+      - sns_ik_examples
+      - sns_ik_lib
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/RethinkRobotics-release/sns_ik-release.git
+      version: 0.2.3-0
+    source:
+      type: git
+      url: https://github.com/RethinkRobotics-opensource/sns_ik.git
+      version: master
+    status: maintained
   soem:
     doc:
       type: git
