--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -4495,6 +4495,14 @@ wkhtmltopdf:
   fedora: [wkhtmltopdf]
   gentoo: [media-gfx/wkhtmltopdf]
   ubuntu: [wkhtmltopdf]
+wmctrl:
+  arch: [wmctrl]
+  debian: [wmctrl]
+  fedora: [wmctrl]
+  gentoo: [x11-misc/wmctrl]
+  opensuse: [wmctrl]
+  rhel: [wmctrl]
+  ubuntu: [wmctrl]
 workrave:
   debian: [workrave]
   fedora: [workrave]
