Fix autossh typo from #15816

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -170,7 +170,7 @@ autopoint:
 autossh:
   arch: [autossh]
   debian: [autossh]
-  fedora: [autosss]
+  fedora: [autossh]
   freebsd: [autossh]
   gentoo: [net-misc/autossh]
   macports: [autossh]
