Adding infinisoleil to documentation index for indigo and groovy

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -3187,6 +3187,11 @@ repositories:
       url: https://github.com/ros-industrial/industrial_core.git
       version: kinetic
     status: maintained
+  infinisoleil:
+    doc:
+      type: git
+      url: https://github.com/ncs-3d-sensing/infinisoleil.git
+      version: master
   innok_heros_driver:
     doc:
       type: git
