m_explore: 2.1.0-0 in 'lunar/distribution.yaml' [bloom]

--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -1359,6 +1359,24 @@ repositories:
       url: https://github.com/orocos-toolchain/log4cpp.git
       version: toolchain-2.9
     status: maintained
+  m_explore:
+    doc:
+      type: git
+      url: https://github.com/hrnr/m-explore.git
+      version: lunar-devel
+    release:
+      packages:
+      - explore_lite
+      - multirobot_map_merge
+      tags:
+        release: release/lunar/{package}/{version}
+      url: https://github.com/hrnr/m-explore-release.git
+      version: 2.1.0-0
+    source:
+      type: git
+      url: https://github.com/hrnr/m-explore.git
+      version: lunar-devel
+    status: developed
   marti_common:
     doc:
       type: git
