robotis_op3: 0.1.1-0 in 'kinetic/distribution.yaml' [bloom]

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -6895,6 +6895,7 @@ repositories:
       - cm_740_module
       - op3_action_module
       - op3_base_module
+      - op3_direct_control_module
       - op3_head_control_module
       - op3_kinematics_dynamics
       - op3_manager
@@ -6904,7 +6905,7 @@ repositories:
       tags:
         release: release/kinetic/{package}/{version}
       url: https://github.com/ROBOTIS-GIT-release/ROBOTIS-OP3-release.git
-      version: 0.1.0-1
+      version: 0.1.1-0
     source:
       type: git
       url: https://github.com/ROBOTIS-GIT/ROBOTIS-OP3.git
