Revert "Removing infinisoleil to documentation index for groovy"
This reverts commit fdab0393242e2149e5a8bef7e8c4f5e2c7a2885b.

--- a/groovy/distribution.yaml
+++ b/groovy/distribution.yaml
@@ -1731,6 +1731,11 @@ repositories:
       type: git
       url: https://github.com/ros-industrial/industrial_moveit.git
       version: groovy-devel
+  infinisoleil:
+    doc:
+      type: git
+      url: https://github.com/ncs-3d-sensing/infinisoleil.git
+      version: master
   interaction_cursor_3d:
     release:
       packages:
