support indigo and kinetic (#16209)
* Adding infinisoleil to documentation index for indigo and groovy

* Revert "Adding infinisoleil to documentation index for indigo and groovy"

This reverts commit 9876f85aaa33b28d4f5d64b9753190c55332b107.

* Adding infinisoleil to documentation index for indigo and kinetic

* Removing infinisoleil to documentation index for groovy

* Revert "Removing infinisoleil to documentation index for groovy"

This reverts commit fdab0393242e2149e5a8bef7e8c4f5e2c7a2885b.

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -4938,6 +4938,11 @@ repositories:
       url: https://github.com/ros-industrial/industrial_moveit.git
       version: indigo
     status: developed
+  infinisoleil:
+    doc:
+      type: git
+      url: https://github.com/ncs-3d-sensing/infinisoleil.git
+      version: master
   innok_heros_control:
     doc:
       type: git
