Contribute rosdep rule for libgpgme11-dev

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -1760,6 +1760,33 @@ libgoogle-glog-dev:
   fedora: [glog-devel]
   gentoo: [dev-cpp/glog]
   ubuntu: [libgoogle-glog-dev]
+libgpgme-dev:
+  arch: [gpgme]
+  debian:
+    buster: [libgpgme-dev]
+    jessie: [libgpgme11-dev]
+    stretch: [libgpgme-dev]
+    wheezy: [libgpgme11-dev]
+  fedora: [gpgme-devel]
+  gentoo: [app-crypt/gpgme]
+  ubuntu:
+    artful: [libgpgme-dev]
+    bionic: [libgpgme-dev]
+    lucid: [libgpgme11-dev]
+    maverick: [libgpgme11-dev]
+    oneiric: [libgpgme11-dev]
+    precise: [libgpgme11-dev]
+    quantal: [libgpgme11-dev]
+    raring: [libgpgme11-dev]
+    saucy: [libgpgme11-dev]
+    trusty: [libgpgme11-dev]
+    trusty_python3: [libgpgme11-dev]
+    utopic: [libgpgme11-dev]
+    vivid: [libgpgme11-dev]
+    wily: [libgpgme11-dev]
+    xenial: [libgpgme11-dev]
+    yakkety: [libgpgme-dev]
+    zesty: [libgpgme-dev]
 libgphoto-dev:
   arch: [libgphoto2]
   debian: [libgphoto2-2-dev]
