specify gentoo category

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -3668,7 +3668,7 @@ openssl:
 optipng:
   debian: [optipng]
   fedora: [optipng]
-  gentoo: [optipng]
+  gentoo: [media-gfx/optipng]
   ubuntu: [optipng]
 osm2pgsql:
   debian: [osm2pgsql]
