drop iproute2 for old ubuntu distro

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -1191,7 +1191,20 @@ iproute2:
   fedora: [iproute]
   gentoo: [sys-apps/iproute2]
   opensuse: [iproute2]
-  ubuntu: [iproute2]
+  ubuntu:
+    artful: [iproute2]
+    bionic: [iproute2]
+    precise: []
+    quantal: []
+    raring: []
+    saucy: [iproute2]
+    trusty: [iproute2]
+    utopic: [iproute2]
+    vivid: [iproute2]
+    wily: [iproute2]
+    xenial: [iproute2]
+    yakkety: [iproute2]
+    zesty: [iproute2]
 jack:
   arch: [jack]
   debian: [libjack-jackd2-dev]
