--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -3192,6 +3192,16 @@ repositories:
       type: git
       url: https://github.com/ncs-3d-sensing/infinisoleil.git
       version: master
+  innok_heros_description:
+    doc:
+      type: git
+      url: https://github.com/innokrobotics/innok_heros_description.git
+      version: kinetic
+    source:
+      type: git
+      url: https://github.com/innokrobotics/innok_heros_description.git
+      version: kinetic
+    status: maintained
   innok_heros_driver:
     doc:
       type: git
