--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -645,7 +645,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros/bond_core.git
-      version: groovy-devel
+      version: kinetic-devel
     release:
       packages:
       - bond
@@ -661,7 +661,7 @@ repositories:
       test_pull_requests: true
       type: git
       url: https://github.com/ros/bond_core.git
-      version: groovy-devel
+      version: kinetic-devel
     status: maintained
   brics_actuator:
     doc:
