--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -145,7 +145,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros/bond_core.git
-      version: lunar-devel
+      version: kinetic-devel
     release:
       packages:
       - bond
@@ -161,7 +161,7 @@ repositories:
       test_pull_requests: true
       type: git
       url: https://github.com/ros/bond_core.git
-      version: lunar-devel
+      version: kinetic-devel
     status: maintained
   calibration:
     doc:
