Added sphinxcontrib-bibtex for multiple distros

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -3919,6 +3919,16 @@ rpy2:
   debian: [python-rpy2]
   gentoo: ['=dev-python/rpy-2*']
   ubuntu: [python-rpy2]
+sphinxcontrib-bibtex:
+  debian:
+    pip:
+      packages: [sphinxcontrib-bibtex]
+  fedora:
+    pip:
+      packages: [sphinxcontrib-bibtex]
+  ubuntu:
+    pip:
+      packages: [sphinxcontrib-bibtex]
 tilestache:
   debian: [tilestache]
   fedora: [python-tilestache]
