--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -15104,7 +15104,7 @@ repositories:
       tags:
         release: release/indigo/{package}/{version}
       url: https://github.com/bosch-robotics-cr/tracetools-release.git
-      version: 0.1.0
+      version: 0.1.0-0
     source:
       type: git
       url: https://github.com/bosch-robotics-cr/tracetools.git
