openni2_camera 0.3.0-0 for IKL

--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -1914,10 +1914,13 @@ repositories:
       url: https://github.com/ros-drivers/openni2_camera.git
       version: indigo-devel
     release:
+      packages:
+      - openni2_camera
+      - openni2_launch
       tags:
         release: release/lunar/{package}/{version}
       url: https://github.com/ros-gbp/openni2_camera-release.git
-      version: 0.2.9-0
+      version: 0.3.0-0
     source:
       test_pull_requests: true
       type: git
