--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -5624,10 +5624,13 @@ repositories:
       url: https://github.com/ros-drivers/openni2_camera.git
       version: indigo-devel
     release:
+      packages:
+      - openni2_camera
+      - openni2_launch
       tags:
         release: release/kinetic/{package}/{version}
       url: https://github.com/ros-gbp/openni2_camera-release.git
-      version: 0.2.9-0
+      version: 0.3.0-0
     source:
       type: git
       url: https://github.com/ros-drivers/openni2_camera.git
