Add -pip suffix

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -3919,7 +3919,7 @@ rpy2:
   debian: [python-rpy2]
   gentoo: ['=dev-python/rpy-2*']
   ubuntu: [python-rpy2]
-sphinxcontrib-bibtex:
+sphinxcontrib-bibtex-pip:
   debian:
     pip:
       packages: [sphinxcontrib-bibtex]
