--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -3172,6 +3172,12 @@ repositories:
       url: https://github.com/wxmerkt/fcl_catkin-release.git
       version: 0.5.90-0
     status: developed
+  fetch_drivers:
+    release:
+      tags:
+        release: release/indigo/{package}/{version}
+      url: git@github.com:fetchrobotics/fetch_drivers-release.git
+      version: 0.7.27-0
   fetch_gazebo:
     doc:
       type: git
