Add python-couchdb for additional ubuntu distros.
See also <https://packages.ubuntu.com/search?keywords=python-couchdb>

Could be simplified to 
```yaml
ubuntu: [python-couchdb]
```
?

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -647,6 +647,7 @@ python-couchdb:
   fedora: [python-couchdb]
   gentoo: [dev-python/couchdb-python]
   ubuntu:
+    artful: [python-couchdb]
     lucid: [python-couchdb]
     maverick: [python-couchdb]
     natty: [python-couchdb]
@@ -656,6 +657,9 @@ python-couchdb:
     raring: [python-couchdb]
     saucy: [python-couchdb]
     trusty: [python-couchdb]
+    xenial: [python-couchdb]
+    yakkety: [python-couchdb]
+    zesty: [python-couchdb]
 python-coverage:
   arch: [python2-coverage]
   debian: [python-coverage]
