Add python-couchdb for additional ubuntu distros. (#16288)
* Add python-couchdb for additional ubuntu distros.

See also <https://packages.ubuntu.com/search?keywords=python-couchdb>

Could be simplified to 
```yaml
ubuntu: [python-couchdb]
```
?

* Set python-couchdb for all ubuntu distros.

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -646,16 +646,7 @@ python-couchdb:
   debian: [python-couchdb]
   fedora: [python-couchdb]
   gentoo: [dev-python/couchdb-python]
-  ubuntu:
-    lucid: [python-couchdb]
-    maverick: [python-couchdb]
-    natty: [python-couchdb]
-    oneiric: [python-couchdb]
-    precise: [python-couchdb]
-    quantal: [python-couchdb]
-    raring: [python-couchdb]
-    saucy: [python-couchdb]
-    trusty: [python-couchdb]
+  ubuntu: [python-couchdb]
 python-coverage:
   arch: [python2-coverage]
   debian: [python-coverage]
