Add ensenso_driver to the index for kinetic and lunar

--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -581,6 +581,16 @@ repositories:
       url: https://github.com/ros/eigen_stl_containers.git
       version: master
     status: maintained
+  ensenso_driver:
+    doc:
+      type: git
+      url: https://github.com/ensenso/ros_driver.git
+      version: master
+    source:
+      type: git
+      url: https://github.com/ensenso/ros_driver.git
+      version: master
+    status: developed
   executive_smach:
     doc:
       type: git
