--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -1961,6 +1961,16 @@ repositories:
       url: https://github.com/ros/eigen_stl_containers.git
       version: master
     status: maintained
+  ensenso_driver:
+    doc:
+      type: git
+      url: https://github.com/ensenso/ros_driver.git
+      version: master
+    source:
+      type: git
+      url: https://github.com/ensenso/ros_driver.git
+      version: master
+    status: developed
   ethercat_grant:
     doc:
       type: git
