eigenpy: use same repo for doc & source

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -2904,7 +2904,7 @@ repositories:
   eigenpy:
     doc:
       type: git
-      url: https://github.com/stack-of-tasks/eigenpy.git
+      url: https://github.com/nim65s/eigenpy.git
       version: master
     source:
       type: git
