--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -3842,6 +3842,8 @@ python-yaml:
     yakkety_python3: [python3-yaml]
     zesty: [python-yaml]
     zesty_python3: [python3-yaml]
+python-ruamel.yaml:
+  ubuntu: [python-ruamel.yaml]
 python-zbar:
   debian: [python-zbar]
   fedora: [zbar-pygtk]
@@ -3908,6 +3910,8 @@ python3-setuptools:
   ubuntu: [python3-setuptools]
 python3-yaml:
   ubuntu: [python3-yaml]
+python3-ruamel.yaml:
+  ubuntu: [python3-ruamel.yaml]
 rosbag-metadata-pip:
   debian:
     pip:
