add pyxhook rosdep key (pip)

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -2476,6 +2476,16 @@ python-pyvirtualdisplay-pip:
   ubuntu:
     pip:
       packages: [pyvirtualdisplay]
+python-pyxhook-pip:
+  debian:
+    pip:
+      packages: [pyxhook]
+  fedora:
+    pip:
+      packages: [pyxhook]
+  ubuntu:
+    pip:
+      packages: [pyxhook]
 python-qrencode:
   debian: [python-qrencode]
   gentoo: [media-gfx/qrencode-python]
