add pip entries for osx as well

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -2483,6 +2483,9 @@ python-pyxhook-pip:
   fedora:
     pip:
       packages: [pyxhook]
+  osx:
+    pip:
+      packages: [pyxhook]
   ubuntu:
     pip:
       packages: [pyxhook]
@@ -3938,6 +3941,9 @@ sphinxcontrib-bibtex-pip:
     pip:
       packages: [sphinxcontrib-bibtex]
   fedora:
+    pip:
+      packages: [sphinxcontrib-bibtex]
+  osx:
     pip:
       packages: [sphinxcontrib-bibtex]
   ubuntu:
