add yakkety for source builds

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -2845,6 +2845,7 @@ python-ruamel.yaml:
     artful: [python-ruamel.yaml]
     bionic: [python-ruamel.yaml]
     xenial: [python-ruamel.yaml]
+    yakkety: [python-ruamel.yaml]
     zesty: [python-ruamel.yaml]
 python-scapy:
   debian: [python-scapy]
@@ -3923,6 +3924,7 @@ python3-ruamel.yaml:
     artful: [python3-ruamel.yaml]
     bionic: [python3-ruamel.yaml]
     xenial: [python3-ruamel.yaml]
+    yakkety: [python3-ruamel.yaml]
     zesty: [python3-ruamel.yaml]
 python3-setuptools:
   debian: [python3-setuptools]
