--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -1967,6 +1967,7 @@ repositories:
       url: https://github.com/ensenso/ros_driver.git
       version: master
     source:
+      test_commits: false
       type: git
       url: https://github.com/ensenso/ros_driver.git
       version: master
