--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -587,6 +587,7 @@ repositories:
       url: https://github.com/ensenso/ros_driver.git
       version: master
     source:
+      test_commits: false
       type: git
       url: https://github.com/ensenso/ros_driver.git
       version: master
