--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -3147,6 +3147,19 @@ python-slacker-cli:
 python-smbus:
   debian: [python-smbus]
   ubuntu: [python-smbus]
+python-snmp:
+  debian:
+    pip:
+      packages: [pysnmp]
+  fedora:
+    pip:
+      packages: [pysnmp]
+  osx:
+    pip:
+      packages: [pysnmp]
+  ubuntu:
+    pip:
+      packages: [pysnmp]
 python-sortedcontainers-pip:
   ubuntu:
     pip:
