--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -3148,18 +3148,10 @@ python-smbus:
   debian: [python-smbus]
   ubuntu: [python-smbus]
 python-snmp:
-  debian:
-    pip:
-      packages: [pysnmp]
-  fedora:
-    pip:
-      packages: [pysnmp]
-  osx:
-    pip:
-      packages: [pysnmp]
-  ubuntu:
-    pip:
-      packages: [pysnmp]
+  debian: [python-pysnmp4]
+  fedora: [pysnmp]
+  gentoo: [dev-python/pysnmp]
+  ubuntu: [python-pysnmp4]
 python-sortedcontainers-pip:
   ubuntu:
     pip:
