python-snmp -> python-pysnmp

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -3147,7 +3147,7 @@ python-slacker-cli:
 python-smbus:
   debian: [python-smbus]
   ubuntu: [python-smbus]
-python-snmp:
+python-pysnmp:
   debian: [python-pysnmp4]
   fedora: [pysnmp]
   gentoo: [dev-python/pysnmp]
