--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -2433,6 +2433,11 @@ python-pyside.qtuitools:
     utopic_python3: [python3-pyside.qtuitools]
     vivid: [python-pyside.qtuitools]
     vivid_python3: [python3-pyside.qtuitools]
+python-pysnmp:
+  debian: [python-pysnmp4]
+  fedora: [pysnmp]
+  gentoo: [dev-python/pysnmp]
+  ubuntu: [python-pysnmp4]
 python-pytest:
   arch: [python2-pytest]
   debian: [python-pytest]
