alliance: 1.0.5-0 in 'indigo/distribution.yaml' [bloom] (#16347)
* alliance: 1.0.5-0 in 'indigo/distribution.yaml' [bloom]

* Update distribution.yaml

* Altered source version to indigo-devel

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -232,6 +232,22 @@ repositories:
       url: https://github.com/rosalfred/alfred_sr_linux.git
       version: master
     status: developed
+  alliance:
+    release:
+      packages:
+      - alliance
+      - alliance_msgs
+      - rqt_alliance
+      tags:
+        release: release/indigo/{package}/{version}
+      url: https://github.com/adrianohrl/alliance-release.git
+      version: 1.0.5-0
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/adrianohrl/alliance.git
+      version: indigo-devel
+    status: developed
   android_apps:
     doc:
       type: git
