fix yakkty typo in mkdocs rule

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -3462,7 +3462,7 @@ mkdocs:
         packages: [mkdocs]
     wily: [mkdocs]
     xenial: [mkdocs]
-    yakkty: [mkdocs]
+    yakkety: [mkdocs]
     zesty: [mkdocs]
 mkdocs-bootstrap:
   debian:
