[rosdep] Add lzma compression library (#16351)
* added lzma library

* add fedora rule

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -2034,6 +2034,10 @@ liblttng-ust-dev:
   fedora: [lttng-ust]
   gentoo: [dev-util/lttng-ust]
   ubuntu: [liblttng-ust-dev]
+liblzma-dev:
+  debian: [liblzma-dev]
+  fedora: [lzma-devel]
+  ubuntu: [liblzma-dev]
 libmagick:
   arch: [imagemagick]
   debian: [libmagick++-dev]
