Add gazebo8 rosdeps for ubuntu

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -802,6 +802,8 @@ gazebo7:
   gentoo: ['=sci-electronics/gazebo-7*']
   slackware: [gazebo]
   ubuntu: [gazebo7]
+gazebo8:
+  ubuntu: [gazebo8]
 gcc-arm-none-eabi:
   arch: [gcc-arm-none-eabi]
   debian: [gcc-arm-none-eabi]
@@ -1670,6 +1672,8 @@ libgazebo7-dev:
   opensuse: [gazebo-devel]
   slackware: [gazebo]
   ubuntu: [libgazebo7-dev]
+libgazebo8-dev:
+  ubuntu: [libgazebo8-dev]
 libgconf2:
   arch: [gconf]
   debian: [libgconf-2-4]
