[KL][doc, source] Add ensenso.

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -1961,6 +1961,17 @@ repositories:
       url: https://github.com/ros/eigen_stl_containers.git
       version: master
     status: maintained
+  ensenso:
+    doc:
+      type: git
+      url: https://github.com/crigroup/ensenso.git
+      version: kinetic-devel
+    source:
+      test_commits: false
+      type: git
+      url: https://github.com/crigroup/ensenso.git
+      version: kinetic-devel
+    status: maintained
   ensenso_driver:
     doc:
       type: git
