--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -581,6 +581,17 @@ repositories:
       url: https://github.com/ros/eigen_stl_containers.git
       version: master
     status: maintained
+  ensenso:
+    doc:
+      type: git
+      url: https://github.com/crigroup/ensenso.git
+      version: kinetic-devel
+    source:
+      test_commits: false
+      type: git
+      url: https://github.com/crigroup/ensenso.git
+      version: kinetic-devel
+    status: maintained
   ensenso_driver:
     doc:
       type: git
