vrpn_client_ros: 0.2.0-0 in 'kinetic/distribution.yaml' [bloom] (#16376)
* vrpn_client_ros: 0.2.0-0 in 'kinetic/distribution.yaml' [bloom]

* Fix branch

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -10579,16 +10579,16 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros-drivers/vrpn_client_ros.git
-      version: indigo-devel
+      version: kinetic-devel
     release:
       tags:
         release: release/kinetic/{package}/{version}
       url: https://github.com/ros-drivers-gbp/vrpn_client_ros-release.git
-      version: 0.1.1-0
+      version: 0.2.0-0
     source:
       type: git
       url: https://github.com/ros-drivers/vrpn_client_ros.git
-      version: indigo-devel
+      version: kinetic-devel
     status: maintained
   warehouse_ros:
     doc:
