[rosdep] Add python-graphviz
Adds the PyPi graphviz package (https://pypi.python.org/pypi/graphviz)

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -1184,6 +1184,19 @@ python-googleapi:
     wily_python3: [python3-googleapi]
     xenial: [python-googleapi]
     xenial_python3: [python3-googleapi]
+python-graphviz:
+  debian:
+    pip:
+      packages: [graphviz]
+  fedora:
+    pip:
+      packages: [graphviz]
+  gentoo:
+    pip:
+      packages: [graphviz]
+  ubuntu:
+    pip:
+      packages: [graphviz]
 python-gridfs:
   debian: [python-gridfs]
   fedora: [python-pymongo-gridfs]
