use kinetic branch of rospack

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -7852,7 +7852,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros/rospack.git
-      version: jade-devel
+      version: kinetic-devel
     release:
       tags:
         release: release/kinetic/{package}/{version}
@@ -7862,7 +7862,7 @@ repositories:
       test_pull_requests: true
       type: git
       url: https://github.com/ros/rospack.git
-      version: jade-devel
+      version: kinetic-devel
     status: maintained
   rosparam_handler:
     doc:
