fetch_drivers: 0.7.28-0 in 'indigo/distribution.yaml' [bloom]

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -3191,6 +3191,12 @@ repositories:
       url: https://github.com/ros-gbp/fcl-release.git
       version: 0.3.4-0
     status: maintained
+  fetch_drivers:
+    release:
+      tags:
+        release: release/indigo/{package}/{version}
+      url: git@github.com:fetchrobotics/fetch_drivers-release.git
+      version: 0.7.28-0
   fetch_gazebo:
     doc:
       type: git
