Change python-graphviz to python-graphviz-pip
Since this dep is pip-only, add the -pip suffix. Also, remove the gentoo entry, since gentoo apparently doesn't support pip.

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -1184,14 +1184,11 @@ python-googleapi:
     wily_python3: [python3-googleapi]
     xenial: [python-googleapi]
     xenial_python3: [python3-googleapi]
-python-graphviz:
+python-graphviz-pip:
   debian:
     pip:
       packages: [graphviz]
   fedora:
-    pip:
-      packages: [graphviz]
-  gentoo:
     pip:
       packages: [graphviz]
   ubuntu:
